# hermes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  agent_runner.py  engram.py  hermes.py  output_validator.py  planner.py  project_registry.py  pyproject.toml  run_engine.py  scaffold_project.py  scheduler.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
config/: config.yaml
scripts/: check-connectivity.sh  check-models.sh  daily_digest.py  start-session.sh
skill-candidates/: my-skill.md
tests/: test_agent_runner.py  test_daily_note.py  test_handoff.py  test_handoff_system.py  test_output_validator.py  test_planner.py  test_progress_note.py  test_project_registry.py  test_run_engine.py  test_run_task.py  test_scaffold_project.py  test_scheduler.py
